# ogc-cql2

./: .env.template  .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md
benches/: common.rs  eval.rs  parse.rs  sql.rs
doc/: CONFIGURATION.md  FUNCTION.md  REPL.md  cql2.bnf  cql2.json  cql2.json.patch
src/: bound.rs  config.rs  context.rs  crs.rs  error.rs  evaluator.rs  expr.rs  function.rs  geom.rs  json.rs  lib.rs  op.rs  prelude.rs  qstring.rs  queryable.rs  srid.rs  text.rs
src/ds/: csv.rs  gpkg.rs  mod.rs  pg.rs  sql.rs  types.rs
src/geom/: bbox.rs  collection.rs  line.rs  lines.rs  mod.rs  point.rs  points.rs  polygon.rs  polygons.rs
src/wkb/: blob.rs  byte_order.rs  envelope.rs  ewkb.rs  header.rs  mod.rs
tests/: grammar.rs  json.rs  mod.rs  text.rs
tests/a1/: mod.rs  test_1.rs  test_2.rs
tests/a10/: mod.rs  test_40.rs  test_41.rs  test_42.rs
tests/a11/: mod.rs  test_44.rs  test_45.rs
tests/a12/: mod.rs  test_46.rs  test_47.rs  test_48.rs  test_49.rs
tests/a13/: mod.rs  test_51.rs
tests/a14/: mod.rs  test_52.rs  test_53.rs
tests/a2/: mod.rs  test_3.rs
tests/a3/: mod.rs  test_4.rs  test_5.rs  test_6.rs  test_7.rs  test_8.rs  test_9.rs
tests/a4/: mod.rs  test_10.rs  test_11.rs  test_12.rs  test_13.rs  test_14.rs
tests/a5/: mod.rs  test_15.rs  test_16.rs  test_17.rs  test_18.rs
tests/a6/: mod.rs  test_19.rs  test_20.rs  test_21.rs  test_22.rs  test_23.rs
tests/a7/: mod.rs  test_25.rs  test_26.rs
tests/a8/: mod.rs  test_28.rs  test_29.rs
tests/a9/: mod.rs  test_30.rs  test_31.rs  test_32.rs  test_33.rs  test_34.rs  test_35.rs  test_36.rs  test_37.rs  test_38.rs
tests/samples/csv/: ne_110m_populated_places_simple.csv  ne_110m_rivers_lake_centerlines.csv
tests/samples/data/: ne110m4cql2.gpkg  ne_110m_admin_0_countries.csv
tests/utils/: country.rs  mod.rs  place.rs  river.rs
