[package]
name = "ogc-cql2"
authors = ["Raif S. Naffah <raif@mailbox.org>"]
version = "0.1.0"
edition = "2024"
description = "OGC CQL2 Text + JSON Encoding parser and interpreter in Rust"
repository = "https://github.com/raif-s-naffah/ogc-cql2"
license = "Apache-2.0"
keywords = ["OGC", "CQL2", "PEG", "JSON", "Parser", "Interpreter"]
categories = ["data-structures", "parser-implementations", "science::geo"]

# [features]
# default = ["peg/trace"]

[dependencies]
tracing = "0.1.41"
dotenvy = "0.15.7"
thiserror = "2.0.16"
peg = "0.8.5"
geos = "10.0.0"
proj = "0.30.0"
jiff = { version = "0.2.15", features = ["serde"] }
unicode-normalization = "0.1.24"
unicase = "2.8.1"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
# needed to work-around the limitation of 'typify' unable to properly
# handle `enum` variants that consist of symbols; e.g. '+', '-', etc...
serde_with = { version = "3.14.0", features = ["macros"] }
# used in 'typify' generated code, which in turn is used, after modification,
# to bootstrap the JSON-encoded parser
regress = { version = "0.10.4", features = ["prohibit-unsafe"] }

[dev-dependencies]
approx = "0.5.1"
walkdir = "2.5.0"
rand = "0.9.2"
csv = "1.3.1"
