[package]
name = "ogc-cql2"
authors = ["Raif S. Naffah <raif@mailbox.org>"]
version = "0.3.0"
edition = "2024"
description = "OGC CQL2 Text + JSON Encoding parser and interpreter in Rust"
repository = "https://github.com/raif-s-naffah/ogc-cql2"
license = "Apache-2.0"
keywords = ["OGC", "CQL2", "PEG", "JSON", "Interpreter"]
categories = ["data-structures", "encoding", "parser-implementations", "science::geo"]

# [features]
# default = ["peg/trace"]

[dependencies]
tracing = "0.1.41"
dotenvy = "0.15.7"
thiserror = "2.0.17"
peg = "0.8.5"
geos = { version = "10.0.0", features = ["v3_11_0"] }
proj = "0.31.0"
jiff = { version = "0.2.16", features = ["serde"] }
unicode-normalization = "0.1.25"
unicase = "2.8.1"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
# needed to work-around the limitation of 'typify' unable to properly
# handle `enum` variants that consist of symbols; e.g. '+', '-', etc...
serde_with = { version = "3.16.0", features = ["macros"] }
# used in 'typify' generated code, which in turn is used, after modification,
# to bootstrap the JSON-encoded parser
regress = { version = "0.10.5", features = ["prohibit-unsafe"] }
csv = "1.4.0"
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "sqlite", "derive", "any"] }
futures = "0.3.31"
async-trait = "0.1.89"
paste = "1.0.15"

[dev-dependencies]
approx = "0.5.1"
walkdir = "2.5.0"
rand = "0.9.2"
