[package]
name = "ogc-cql2"
authors = ["Raif S. Naffah <raif@mailbox.org>"]
version = "0.5.2"
edition = "2024"
description = "OGC CQL2 Text + JSON Encoding parser and interpreter in Rust"
repository = "https://github.com/raif-s-naffah/ogc-cql2"
license = "Apache-2.0"
keywords = ["OGC", "CQL2", "PEG", "JSON", "Interpreter"]
categories = ["data-structures", "encoding", "parser-implementations", "science::geo"]

[dependencies]
tracing = "0.1.44"
dotenvy = "0.15.7"
thiserror = "2.0.18"
peg = "0.8.5"
geos = { version = "11.1.1", features = ["v3_14_0"] }
proj = { version = "0.31.0", default-features = false }
jiff = { version = "0.2.23", features = ["serde"] }
unicode-normalization = "0.1.25"
unicase = "2.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# needed to work-around the limitation of 'typify' unable to properly
# handle `enum` variants that consist of symbols; e.g. '+', '-', etc...
serde_with = { version = "3.17.0", features = ["macros"] }
# used in 'typify' generated code, which in turn is used, after modification,
# to bootstrap the JSON-encoded parser
regress = { version = "0.10.5", features = ["prohibit-unsafe"] }
csv = "1.4.0"
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.9.0-alpha.1", features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "derive",
    "time",
] }
futures = "0.3.31"
async-trait = "0.1.89"
paste = "1.0.15"

[dev-dependencies]
tracing-test = { version = "0.2.6", features = ["no-env-filter"] }
approx = "0.5.1"
walkdir = "2.5.0"
rand = "0.10.0"
criterion = { version = "0.8.2", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "eval"
harness = false

[[bench]]
name = "sql"
harness = false
